Wrong lattice vertex weights #30419

Closed
opened 2012-03-01 22:14:37 +01:00 by Pep · 5 comments

%%%Create a simple lattice.
Set one of its vertices to, let's say, Weight=1 (from the Transform panel).
Extend the selection to another vertex. Now, the median weight is 0.5.
Increase that median weight to 0.8.
What happens is that, instead of adding to the median, it adds +0.3 to each vertex, that is, the first will be 1.3 (beyond the maximum!) and the other 0.3.

Regards,

Pep.
%%%

%%%Create a simple lattice. Set one of its vertices to, let's say, Weight=1 (from the Transform panel). Extend the selection to another vertex. Now, the median weight is 0.5. Increase that median weight to 0.8. What happens is that, instead of adding to the median, it adds +0.3 to each vertex, that is, the first will be 1.3 (beyond the maximum!) and the other 0.3. Regards, Pep. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Yeah, code about this weight is indeed wrong (affects also curves, btw)… Fixing it using similar code to the one used for mesh’s crease and bevel weight is trivial (see attached patch), but I think we should rather make a small handy func to compute those factors – else, we end up repeating nearly the same (quite long) code four times :/

Will see this tomorrow!%%%

%%%Yeah, code about this weight is indeed wrong (affects also curves, btw)… Fixing it using similar code to the one used for mesh’s crease and bevel weight is trivial (see attached patch), but I think we should rather make a small handy func to compute those factors – else, we end up repeating nearly the same (quite long) code four times :/ Will see this tomorrow!%%%

%%%Done in new patch… Also greatly simplified UI code for transform edit!%%%

%%%Done in new patch… Also greatly simplified UI code for transform edit!%%%

%%%Fixed in svn44599.

Thanks for reporting. :)%%%

%%%Fixed in svn44599. Thanks for reporting. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30419
No description provided.